project(cdclsolve)
cmake_minimum_required(VERSION 3.18)
include(GNUInstallDirs)
find_package(Boost 1.74 COMPONENTS program_options REQUIRED)
set(CMAKE_CXX_STANDARD 17)
set(SOURCE_FILES src/main.cpp src/Solver.cpp src/Formula.cpp src/Clause.cpp src/Variable.cpp)
add_executable(cdclsolve ${SOURCE_FILES})
target_include_directories(cdclsolve PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include ${Boost_INCLUDE_DIR})
target_link_libraries(cdclsolve ${Boost_LIBRARIES})
install(TARGETS cdclsolve RUNTIME)
